public/css/master.css
/* ... */
.img_box {
    cursor: pointer;
    float: left;
    height: 0;
    margin-left: 38px;
    margin-right: 10px;
    margin-top: -30px;
    position: absolute;
    width: 8px;
}
.no_margine{ padding-bottom: 9px;}

.table_top{ float:left; width:99%; background:#d9534f; border-radius:6px; line-height:55px;}

table.dataTable thead th:first-child {
    border-top-left-radius: 6px;
    border-bottom-left-radius: 6px;
    background-image: none !important;
}

table.dataTable thead th:last-child {
    border-top-right-radius: 6px;
    border-bottom-right-radius: 6px;
}

table.dataTable thead th {
    background-color: #d9534f;
    color: #fff;
    font-family: 'Lato',sans-serif;
    font-size: 14px;
    vertical-align: middle;
    border-bottom: none;
    background-repeat: no-repeat;
    cursor:pointer;
}

table.dataTable thead th.sorting {
    background-image: url(../images/sorting_bg.png);
}

table.dataTable thead th.sorting_desc {
    background-image: url(../images/sorting_desc.png);
}

table.dataTable thead th.sorting_asc {
    background-image: url(../images/sorting_asc.png);
}

table.dataTable tbody tr:first-child td {
    border-top: none;
}

table.dataTable tbody td:nth-child(1),
table.dataTable thead th:nth-child(1) {
    width: 40px !important;
}

table.dataTable thead th:nth-child(2),
table.dataTable thead th:nth-child(3) {
    background-position: 96% 20px;
}

table.dataTable tbody td:nth-child(4),
table.dataTable thead th:nth-child(4) {
    width: 130px !important;
    background-position: 93% 20px;
}

table.dataTable tbody td:nth-child(5),
table.dataTable thead th:nth-child(5) {
    width: 130px !important;
    background-position: 93% 20px;
}

table.dataTable tbody td:nth-child(6),
table.dataTable thead th:nth-child(6) {
    width: 130px !important;
    background-position: 93% 20px;
}

table.dataTable tbody td:nth-child(7),
table.dataTable thead th:nth-child(7) {
    width: 130px !important;
    background-position: 93% 20px;
}

table.dataTable tbody td {
    text-align: left;
    color: #95a0aa;
    font-family: 'Lato',sans-serif;
    font-size: 14px;
    vertical-align: middle;
    cursor: pointer;
}

.dataTables_length {
    float:right;
    width: 170px;
    border: 1px solid #ced3d7;
    border-radius:6px;
    background:#fff;
    padding: 8px 0 6px 11px;
    font-family: 'Lato', sans-serif;
    font-size:14px;
    color:#95a0aa;
    height: 50px;
}

.dataTables_length label {
    float:left;
    margin-top:5px;
    margin-right:6px;
}

.datatable-scroll {
    margin-top: 20px;
}

.dataTables_filter {
    display: inline-block;
    border: 1px solid #ced3d7;
    width: 83%;
    border-radius:6px;
    background:#fff;
}

.public .dataTables_filter {
    width: 79%;
}

.dataTables_filter input {
    border: none;
    padding-top: 10px;
    width:91%;
    border-radius: 6px;
    font-family: 'Lato', sans-serif;
    font-size:14px;
    color:#333333;
    height: 33px;
}

.dataTables_filter button {
    border: none;
    background: none;
    float: right;
    margin-top: 12px;
    margin-right:10px;
    cursor:pointer;
}

.dataTables_paginate {
    float:left;
    width:auto;
    border:1px solid #ced3d7;
    border-right: none;
    border-radius:5px;
    margin-top: 5px;
}

.dataTables_paginate a:first-child {
    border-top-left-radius:6px;
    border-bottom-left-radius:6px;
}
.dataTables_paginate a:last-child {
    border-top-right-radius:6px;
    border-bottom-right-radius:6px;
}
.dataTables_paginate span a:first-child,
.dataTables_paginate span a:last-child {
    border-radius: 0;
}
.dataTables_paginate span span {
    float: left;
    border-right: 1px solid #ced3d7;
    display: block;
    height: 32px;
    padding: 0 5px;
    color: #95a0aa;
}
.dataTables_paginate a {
    padding: 6px 17px;
    float:left;
    border-right:1px solid #ced3d7;
    color:#95a0aa;
    font-family: 'Lato',sans-serif;
    font-size:14px;
    transition:all 0.5s;
    -ms-transition:all 0.5s;
    -o-transition:all 0.5s;
    -webkit-transition:all 0.5s;
    cursor:pointer;
}
.dataTables_paginate a.current {
    background:#DDDDDD;
    color:#000000;
}
.dataTables_paginate a:hover {
    background:#EBEBEB;
    color:#000000;
}
.dataTables_info {
    color: #95A0AA;
    font-size: 14px;
    padding-top: 5px;
}

.back_next { float:right; width:auto; color:#767e8f; font-family: 'Lato',sans-serif;font-size:14px; line-height:33px; margin-right: 12px;}
.back_button {  background:#d9534f; padding:10px; border-radius:6px;color:#fff; font-family: 'Lato',sans-serif;font-size:14px; margin-left:11px; margin-right:11px;transition:all 0.5s; -ms-transition:all 0.5s;-o-transition:all 0.5s;-webkit-transition:all 0.5s;}
.next_button {  background:#38a6a6; padding:10px; border-radius:6px;color:#fff; font-family: 'Lato',sans-serif;font-size:14px;transition:all 0.5s; -ms-transition:all 0.5s;-o-transition:all 0.5s;-webkit-transition:all 0.5s;}
a.back_button:hover{background:#9e1915; color: #ffffff;}
a.next_button:hover{ background:#0c7373; color: #ffffff;}

p.draft-subject,
p.draft-body,
p.draft-to,
.original-message {
    border: 1px solid #ced3d7;
    border-radius: 6px;
    padding: 10px;
}

.original-message {
    min-height: 200px;
    background-color: #DDDDDD;
}

p.draft-to span {
    background-color: #D9534F;
    border-radius: 4px;
    color: #FFFFFF;
    margin-right: 1px;
    padding: 4px 5px;
}

.email {
    background: url(../images/email_bg.png) no-repeat scroll 58px center #d9534f;
    color: hsl(0, 0%, 100%);
    font-family: 'Lato',sans-serif;
    font-size: 14px;
    line-height: 30px;
    padding: 5px;
    /*width: 30%; */
}
.sent {
    background: url(../images/email_bg.png) no-repeat scroll 91px center #d9534f ;
    color: hsl(0, 0%, 100%);
    font-family: 'Lato',sans-serif;
    font-size: 14px;

    width: 15%;

}
/* ... */

